# mimic-iv-clinical-database-demo-rust-crate

./: .gitignore  CITATION.cff  Cargo.toml  README.md  ai-plan.md  ai-tasks.md
src/: lib.rs
src/demo/: mod.rs  subject_id.rs
src/hosp/: admissions.rs  d_hcpcs.rs  d_icd_diagnoses.rs  d_icd_procedures.rs  d_labitems.rs  diagnoses_icd.rs  drgcodes.rs  emar.rs  emar_detail.rs  hcpcsevents.rs  labevents.rs  microbiologyevents.rs  mod.rs  omr.rs  patients.rs  pharmacy.rs  poe.rs  poe_detail.rs  prescriptions.rs  procedures_icd.rs  provider.rs  services.rs  transfers.rs
src/icu/: caregiver.rs  chartevents.rs  d_items.rs  datetimeevents.rs  icustays.rs  ingredientevents.rs  inputevents.rs  mod.rs  outputevents.rs  procedureevents.rs
